--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@material-ui/icons": "^3.0.2",
     "@rails/webpacker": "^4.0.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "formik": "^1.5.7",
+    "materialize-css": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.4.1"
