--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@rails/webpacker": "^4.0.2",
+    "axios": "^0.18.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "formik": "^1.5.7",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
