--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/icons": "^4.0.0",
+    "@material-ui/lab": "^4.0.0-alpha.13",
     "@rails/webpacker": "^4.0.2",
     "axios": "^0.18.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -13,6 +14,7 @@
     "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0",
     "prop-types": "^15.7.2",
+    "rc-slider": "^8.6.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
